--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,8 @@
-<div>
-  <p>This is my footer</p>
+<div class="footer d-flex align-items-center">
+  <div class="container d-flex justify-content-center">
+    <div><a href=""><i class="fab fa-facebook-square"></a></i></div>
+    <div><a href=""><i class="fab fa-twitter-square"></a></i></div>
+    <div><a href=""><i class="fab fa-linkedin"></a></i></div>
+    <div><a href=""><i class="fab fa-github-square"></a></i></div>
+  </div>
 </div>
