--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,7 @@
-<div>
-  <ul>
-    <li>Home</li>
-    <li>Articles</li>
-    <li>Contact</li>
-    <li>Contact</li>
-  </ul>
+<div class="navbar">
+  <div class="container d-flex align-items-center justify-content-around">
+    <div><a href="/"><p>Home</p></a></div>
+    <div><a href="/blog.html"><p>Blog</p></a></div>
+    <div><a href="/contact.html"><p>Contact</p></a></div>
+  </div>
 </div>
