--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<div class="footer d-flex align-items-center">
-  <div class="container d-flex justify-content-center">
-    <div><a href=""><i class="fab fa-facebook-square"></a></i></div>
-    <div><a href=""><i class="fab fa-twitter-square"></a></i></div>
-    <div><a href=""><i class="fab fa-linkedin"></a></i></div>
-    <div><a href=""><i class="fab fa-github-square"></a></i></div>
-  </div>
+<div class="container">
+  <footer class="inner border-top border-dark d-flex justify-content-center align-items-center">
+    <!-- <a href=""><i class="fab fa-facebook-square"></a></i> -->
+    <a href=""><i class="fab fa-twitter-square"></a></i>
+    <a href=""><i class="fab fa-linkedin"></a></i>
+    <a href=""><i class="fab fa-github-square"></a></i>
+  </footer>
 </div>
