--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,22 +1,55 @@
-.navbar .container{
-  width: 600px;
+header {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: bold;
+  padding: 10px;
 }
 
-.navbar{
-  background-color: #EEEEEE;
+header nav {
+  float: left;
+  padding-top: 14px;
 }
 
-.navbar a{
-  color: #535353;
-}
-
-.navbar a:hover{
-  color:           #212121;
-  text-decoration: none;
-}
-
-.navbar p{
-  font-size:      20px;
-  margin-bottom:  0;
+nav a {
+  display: inline-block;
+  margin-right: 1.2em;
+  padding-bottom: 0.2em;
+  font-weight: normal;
+  border-bottom: 3px solid transparent;
   text-transform: uppercase;
+}
+
+nav a:last-child {
+  margin-right: 0;
+}
+
+nav a:hover {
+  text-decoration: none;
+  border-bottom: 3px solid #3073b3;
+}
+
+nav a.selected {
+  color: black;
+}
+
+nav a.selected:hover {
+  border-bottom: none;
+}
+
+.container {
+  margin-bottom: 10px;
+}
+
+.avatar {
+  border-radius: 50%;
+  max-width: 50px;
+  vertical-align: -9px;
+  margin-left: 12px;
+}
+
+.name {
+  margin-right: 10px;
+}
+
+.name p{
+  margin-bottom: 0;
 }
