--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,6 +10,12 @@ p{
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1{
+h1, h2{
   font-family: 'Alegreya', serif;
+}
+
+.inner {
+  max-width: 680px;
+  margin-left: auto;
+  margin-right: auto;
 }
