--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,9 +2,9 @@
   <header class="inner  border-bottom border-dark d-flex align-items-center justify-content-center">
     <nav class="mr-auto p-2">
       <a class="{% if page.url == '/' %} selected {% endif %}" href="/">Home</a>
-      <a class="{% if page.url == '/blog.html' %} selected {% endif %}" href="/blog/">Blog</a>
-      <a class="{% if page.url == '/portfolio.html' %} selected {% endif %}" href="/">Portfolio</a>
-      <a class="{% if page.url == '/contact.html' %} selected {% endif %}" href="/contact/">Contact</a>
+      <a class="{% if page.url == '/blog' %} selected {% endif %}" href="/blog">Blog</a>
+      <a class="{% if page.url == '/portfolio' %} selected {% endif %}" href="/">Portfolio</a>
+      <a class="{% if page.url == '/contact' %} selected {% endif %}" href="/contact">Contact</a>
     </nav>
 
     <div class="pull-right d-flex align-items-center">
