--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,12 @@
 <div class="container">
-  <footer class="inner border-top border-dark d-flex justify-content-center align-items-center">
-    <a href="https://twitter.com/AlexBouvier86"><i class="fab fa-twitter-square"></a></i>
-    <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/"><i class="fab fa-linkedin"></a></i>
-    <a href="https://github.com/alexandrebk/"><i class="fab fa-github-square"></a></i>
+  <footer class="inner border-top border-dark">
+    <div class="text-center">
+      <p>Made by <a href="https://jekyllrb.com">Jekyll</a>, hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io">Github Pages</a></p>
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+      <a href="https://twitter.com/AlexBouvier86"><i class="fab fa-twitter-square"></a></i>
+      <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/"><i class="fab fa-linkedin"></a></i>
+      <a href="https://github.com/alexandrebk/"><i class="fab fa-github-square"></a></i>
+    </div>
   </footer>
 </div>
