--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,9 +8,10 @@ a:hover {
 
 p{
   font-family: 'Source Sans Pro', sans-serif;
+  line-height: 170%;
 }
 
-h1, h2{
+.inner h1,h2{
   font-family: 'Alegreya', serif;
 }
 
@@ -18,4 +19,9 @@ h1, h2{
   max-width: 680px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.inner ul{
+  list-style: none;
+  padding-left: 0;
 }
