Add CNAME and update metadata

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    {% description = "Ce blog est à propos de développement Web en général et  de Ruby on Rails en particulier. " %}
-    <meta name="description" content="{{ description }}">
-    {% domain = "https://alexandrebk.github.io" %}
+    <meta name="description" content="Ce blog est à propos de développement Web en général et  de Ruby on Rails en particulier.">
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ domain }}{{ page.url }}" />
-    <meta property="og:image" content="{{ domain}}/images/jim-carrey.gif" />
-    <meta property="og:description" content= "{{ description }}" />
+    <meta property="og:url" content="https://www.alexandrebouvier.fr{{ page.url }}" />
+    <meta property="og:image" content="https://www.alexandrebouvier.fr/images/jim-carrey.gif" />
+    <meta property="og:description" content="Ce blog est à propos de développement Web en général et  de Ruby on Rails en particulier." />
     <meta property="og:site_name" content="{{ page.title }}" />
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
