Updates Post on Heroku

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
       <div class="name">
         <p>Alexandre Bouvier</p>
         <small>
-          <em>Développeur freelance RoR</em>
+          <em>Développeur et Formateur</em>
         </small>
       </div>
       <img class="avatar" src="/images/alexandrebk.jpeg" alt="My profile picture" />
