--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="inner">
   <h1>{{ page.title }}</h1>
-  <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+  <p class="text-right"><i class="fas fa-calendar"></i> {{ page.date | date_to_string }} <i class="fas fa-user"></i> {{ page.author }}</p>
 
   {{ content }}
 </div>
