Add viewport meta data for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="description" content="Ce blog est à propos de développement Web en général et  de Ruby on Rails en particulier.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alexandrebouvier.fr{{ page.url }}" />
