--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,13 @@
 ---
 layout: default
 ---
-<div class="inner">
-  <h1>{{ page.title }}</h1>
-  <p>
-    <i class="fas fa-calendar"></i>
-    {{ page.date | date_to_string }}
-  </p>
-  {{ content }}
+<div class="container">
+  <div class="inner">
+    <h1>{{ page.title }}</h1>
+    <p>
+      <i class="fas fa-calendar"></i>
+      {{ page.date | date_to_string }}
+    </p>
+    {{ content }}
+  </div>
 </div>
