--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,17 +17,17 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul id="list" class="navbar-nav mr-auto p-2">
-          <li class="nav-item active">
-            <a class="nav-link {% if page.url == '/' %} selected {% endif %}" href="/">Home</a>
+          <li class="nav-item">
+            <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/blog' %} selected {% endif %}" href="/blog">Blog</a>
+            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/portfolio' %} selected {% endif %}" href="/portfolio">Portfolio</a>
+            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/contact' %} selected {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">CV</a>
+            <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">CV</a>
           </li>
         </ul>
       </div>
