front end design

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,19 +1,19 @@
 <div class="container">
-  <header class="inner border-bottom border-dark d-flex align-items-center justify-content-center">
+  <header class="d-flex align-items-center justify-content-center">
 
     <nav class="navbar navbar-light light-blue lighten-4 w-100">
       <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
         aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span></button>
 
-      <div class="d-avatar pull-right">
-        <img class="avatar" src="/images/alexandrebk.jpeg" alt="My profile picture" />
-        <div class="name">
-          <p>Alexandre Bouvier</p>
-          <small>
-            <em>Développeur et Formateur</em>
-          </small>
+      <a href="/">
+        <div class="d-avatar pull-right">
+          <img class="avatar" src="/images/alexandrebk.jpeg" alt="My profile picture" />
+          <div>
+            <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
+            <h2><span class="text-light-upcase">Développeur et formateur</span></h2>
+          </div>
         </div>
-      </div>
+      </a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul id="list" class="navbar-nav mr-auto p-2">
