--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
     <meta property="og:image" content="https://www.alexandrebouvier.fr/images/jim-carrey.gif" />
     <meta property="og:description" content="Ce blog est à propos de développement Web en général et de Ruby on Rails en particulier." />
     <meta property="og:site_name" content="{{ page.title }}" />
-    <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="shortcut icon" href="images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,700|Source+Sans+Pro:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/styles.css">
     {% if jekyll.environment == 'production' %}
     {% include google-analytics.html %}
     {% endif %}
