--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,10 @@ layout: default
 ---
 <div class="container">
   <div class="inner">
-    <h1>{{ page.title }}</h1>
-    <p>
-      <i class="fas fa-calendar"></i>
-      {{ page.date | date_to_string }}
-    </p>
+    <div class="page-title">
+      <h1>{{ page.title }}</h1>
+    </div>
+    <p><span class="post-date">{{ page.date | date: "%d %B %Y" }}</span></p>
     {{ content }}
   </div>
 </div>
