--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,13 +1,13 @@
-footer{
-  height:  40px;
+footer {
+  margin-top: 2rem;
+  height:     40px;
 }
 
 .fab{
-  // color:     #535353;
   font-size: 30px;
   padding:   0 5px;
 }
 
 .fab:hover{
-  color: #3073b3;
+  color: $green;
 }
