--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <div class="page-title">
       <h1>{{ page.title }}</h1>
     </div>
-    <p><span class="post-date">{{ page.date | date: "%d %B %Y" }}</span></p>
+    <p><span class="post-date">{{ page.date | date: "%d %B %Y" }} | {{ page.tags }}</span></p>
     {{ content }}
   </div>
 </div>
