--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,10 +21,10 @@
             <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog">Blog</a>
+            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio">Portfolio</a>
+            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">CV</a>
