--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <meta name="description" content="Ce blog est à propos de développement Web en général et  de Ruby on Rails en particulier.">
+    <title>{{ page.seo_title || page.title }}</title>
+    <meta name="description" content="{{ page.seo_description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:title" content="{{ page.seo_title || page.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alexandrebouvier.fr{{ page.url }}" />
     <meta property="og:image" content="https://www.alexandrebouvier.fr/images/jim-carrey.gif" />
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/styles.css">
     {% if jekyll.environment == 'production' %}
-    {% include google-analytics.html %}
+      {% include google-analytics.html %}
     {% endif %}
   </head>
   <body>
