--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,16 +18,24 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul id="list" class="navbar-nav mr-auto p-2">
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">Home</a>
+            <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">
+              Blog
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog.html">Blog</a>
+            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog.html">
+              Mon Parcours
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">Portfolio</a>
+            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
+              Portfolio
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">CV</a>
+            <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">
+              CV
+            </a>
           </li>
         </ul>
       </div>
