--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <meta charset="utf-8">
-    <title>{{ page.seo_title || page.title }}</title>
+    <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.seo_description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="{{ page.seo_title || page.title }}" />
+    <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alexandrebouvier.fr{{ page.url }}" />
     <meta property="og:image" content="https://www.alexandrebouvier.fr/images/jim-carrey.gif" />
