--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,6 +33,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="/contact.html">
+              Contact
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link {% if page.url == '/contact.html' %} active {% endif %}" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">
               CV
             </a>
