--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,8 +23,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/blog.html' %} active {% endif %}" href="/blog.html">
-              Mon Parcours
+            <a class="nav-link {% if page.url == '/resources.html' %} active {% endif %}" href="/resources.html">
+              Ressources Utiles
             </a>
           </li>
           <li class="nav-item">
