--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,10 +1,11 @@
 ---
 ---
-@import "variables";
+@import "blog";
+@import "footer";
 @import "main";
 @import "navbar";
-@import "footer";
+@import "portfolio";
 @import "posts";
 @import "pygments";
-@import "portfolio";
-@import "blog";
+@import "resources";
+@import "variables";
