--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -15,6 +15,7 @@ nav li:last-child {
 
 .navbar {
   padding: 10px 0 !important;
+  color: $white2 !important;
 }
 
 .nav-item {
@@ -27,10 +28,11 @@ nav li:last-child {
     background-size:   200% 100%;
     transition:        all .25s ease-in;
 }
+
 .nav-item:hover{
   background-position: 0 0;
   a {
-    color:$white;
+    color: $white;
   }
 }
 
