Change color to white for navbar button

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,11 @@
 
     <nav class="navbar navbar-light light-blue lighten-4 w-100">
       <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span></button>
+        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="text-white">
+          <i class="fas fa-bars fa-1x"></i>
+        </span>
+      </button>
 
       <a href="/">
         <div class="d-avatar pull-right">
