Refacto Navbar for mobile and split blog and article in resource page

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -17,6 +17,10 @@ nav li:last-child {
   padding: 10px 0 !important;
 }
 
+.active {
+  text-decoration: underline;
+}
+
 .nav-link {
   color: $white2 !important;
 }
