--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,5 +6,5 @@
 @import "navbar";
 @import "portfolio";
 @import "posts";
+// Pygments handle color for block code
 @import "pygments";
-@import "resources";
