--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,30 @@
 <div class="container">
   <header class="d-flex align-items-center justify-content-center">
-
     <nav class="navbar navbar-light light-blue lighten-4 w-100">
-      <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-        aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="text-white">
-          <i class="fas fa-bars fa-1x"></i>
-        </span>
-      </button>
-
-      <a href="/">
-        <div class="d-avatar pull-right">
-          <img class="avatar" src="/images/alexandrebk.jpeg" alt="My profile picture" />
-          <div>
-            <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
-            <h2><span class="text-light-upcase">Développeur et formateur</span></h2>
+      <div class="d-flex justify-content-between">
+        <a href="/">
+          <div class="d-avatar pull-right">
+            <img class="avatar collapse"
+                 src="/images/alexandrebk.jpeg"
+                 alt="My profile picture" />
+            <div>
+              <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
+              <h2><span class="text-light-upcase">Développeur et formateur</span></h2>
+            </div>
           </div>
-        </div>
-      </a>
+        </a>
+        <button class="navbar-toggler toggler-example"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent1"
+                aria-controls="navbarSupportedContent1"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+          <span class="text-white">
+            <i class="fas fa-bars fa-1x"></i>
+          </span>
+        </button>
+      </div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul id="list" class="navbar-nav mr-auto p-2">
