fix: Fix bug css

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -2,7 +2,7 @@
   padding:         40px 0;
   border-top:      1px solid $light-grey;
   display:         flex;
-  justify-content: space-between;
+  justify-content: start;
 }
 
 .portfolio img {
