feat: Add book to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -40,7 +40,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
-              Portfolio
+              Projets
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if page.url == '/livres.html' %} active {% endif %}" href="/livres.html">
+              Livres
             </a>
           </li>
           <li class="nav-item">
