feat: Add cheat sheet page in navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,8 +39,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
-              Projets
+            <a class="nav-link {% if page.url == '/cheat_sheet' %} active {% endif %}"
+               href="/cheat_sheet">
+              Cheat Sheet
             </a>
           </li>
           <li class="nav-item">
