--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,11 +38,21 @@
               Ressources Utiles
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page.url == '/cheat_sheet' %} active {% endif %}"
-               href="/cheat_sheet">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="navbarDropdown"
+               role="button"
+               data-toggle="dropdown"
+               aria-haspopup="true"
+               aria-expanded="false">
               Cheat Sheet
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/cheat_sheet">Ruby/Rails</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/cheat_sheet_python">Python</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if page.url == '/livres.html' %} active {% endif %}" href="/livres.html">
