Adds 'active' class if page.url contains 'cheat_sheet'

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,7 +39,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/cheat_sheet' %} active {% endif %}" href="/cheat_sheet">
+            <a class="nav-link {% if page.url contains 'cheat_sheet' %} active {% endif %}" href="/cheat_sheet">
               Cheat Sheet
             </a>
           </li>
