--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,6 @@
 ---
 ---
-@import "variables";
+@import "cards";
 @import "footer";
 @import "main";
 @import "navbar";
@@ -8,3 +8,4 @@
 @import "posts";
 // Pygments handle color for block code
 @import "pygments";
+@import "variables";
