Adds width and heigt in homepage image

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,6 +6,8 @@
           <div class="d-avatar pull-right">
             <img class="avatar collapse"
                  src="/images/alexandrebk.jpeg"
+                 width="84"
+                 height="84"
                  alt="My profile picture" />
             <div>
               <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
