--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -46,8 +46,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if page.url == '/livres.html' %} active {% endif %}" href="/livres.html">
-              Livres
+            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
+              Portfolio
             </a>
           </li>
           <li class="nav-item">
