--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -9,6 +9,7 @@
   width:         300px;
   margin-right:  1.4rem;
   border-radius: 2px;
+  aspect-ratio:  16/10;
 }
 
 .page-portfolio li:last-child {
