--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
 <div class="container">
   <footer class="inner">
     <div class="text-center text-light-upcase my-2">
-      <p>Made by <a href="https://jekyllrb.com" class="highlighted">Jekyll</a>, hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io" class="highlighted">Github Pages</a></p>
+      <p>
+        Made by <a href="https://jekyllrb.com" class="highlighted" target="_blank">Jekyll</a>,
+        hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io" class="highlighted" target="_blank">Github Pages</a>
+      </p>
     </div>
     <div class="d-flex justify-content-center align-items-center">
       <a href="https://twitter.com/AlexBouvier86"><i class="fab fa-twitter-square"></a></i>
