--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
                  alt="My profile picture" />
             <div>
               <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
-              <h2><span class="text-light-upcase">Développeur et formateur</span></h2>
+              <h2><span class="text-light-upcase">Fullstack Developer Ruby on Rails</span></h2>
             </div>
           </div>
         </a>
