--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0 0;
   color:  $white2;
-  background-color: #1B2733;
+  background-color: $light-dark;
 }
 
 a {
@@ -13,7 +13,7 @@ a {
 }
 
 h1, h2 {
-  font-family: "Open-sans", sans-serif;
+  font-family: 'Open-sans', 'Helvetica', sans-serif;
   line-height: 2rem;
 }
 
@@ -28,7 +28,7 @@ h2 {
 }
 
 p {
-  font-family: 'Merriweather', serif;
+  font-family: 'Times New Roman', serif;
   font-weight: 200;
   line-height: 170%;
 }
