--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,21 @@
-<div class="container">
-  <footer class="inner">
-    <div class="text-center text-light-upcase my-2">
+<div class="">
+  <footer class="container inner">
+    <div>
       <p>
-        Made by <a href="https://jekyllrb.com" class="highlighted" target="_blank">Jekyll</a>,
-        hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io" class="highlighted" target="_blank">Github Pages</a>
+        Made with <a href="https://jekyllrb.com" class="underlined" target="_blank">Jekyll</a>,
+        hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io" class="underlined" target="_blank">Github Pages</a>
       </p>
     </div>
-    <div class="d-flex justify-content-center align-items-center">
-      <a href="https://twitter.com/AlexBouvier86"><i class="fab fa-twitter-square"></a></i>
-      <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/"><i class="fab fa-linkedin"></a></i>
-      <a href="https://github.com/alexandrebk/"><i class="fab fa-github-square"></a></i>
+    <div>
+      <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" target="_blank">
+        {% include icons/linkedin.svg %}
+      </a>
+      <a href="https://github.com/alexandrebk/" target="_blank">
+        {% include icons/github.svg %}
+      </a>
+      <a href="https://twitter.com/AlexBouvier86" target="_blank">
+        {% include icons/twitter.svg %}
+      </a>
     </div>
   </footer>
 </div>
