--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -14,16 +14,23 @@ a {
 
 h1, h2 {
   font-family: 'Open-sans', 'Helvetica', sans-serif;
-  line-height: 2rem;
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
   margin: 0;
 }
 
 h2 {
-  font-size:   1.6rem;
+  font-size:   1.75rem;
+  line-height: 2rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size:   1.5rem;
+  line-height: 2rem;
   font-weight: 400;
 }
 
@@ -31,6 +38,7 @@ p {
   font-family: 'Times New Roman', serif;
   font-weight: 200;
   line-height: 170%;
+  font-size: 1.25rem;
 }
 
 .inner {
