--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,12 +4,12 @@ footer {
   svg {
     width:  30px;
     height: 30px;
-    margin: 0 6px;
+    margin: 16px 6px;
+    transition: margin-top 0.5s ease-out;
   }
 
   svg:hover {
-    width:  40px;
-    height: 40px;
+    margin-top: 0px;
   }
 
   div {
