Add malt icon and change icon color

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,9 @@
       <a href="https://twitter.com/AlexBouvier86" target="_blank">
         {% include icons/twitter.svg %}
       </a>
+      <a href="https://www.malt.fr/profile/alexandrebouvier" target="_blank">
+        {% include icons/malt.svg %}
+      </a>
     </div>
   </footer>
 </div>
