--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,22 @@
-<div class="">
-  <footer class="container inner">
-    <div>
-      <p>
-        Made with <a href="https://jekyllrb.com" class="underlined" target="_blank">Jekyll</a>,
-        hosted on <a href="https://github.com/alexandrebk/alexandrebk.github.io" class="underlined" target="_blank">Github Pages</a>
-      </p>
-    </div>
-    <div>
-      <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" target="_blank">
-        {% include icons/linkedin.svg %}
-      </a>
-      <a href="https://github.com/alexandrebk/" target="_blank">
-        {% include icons/github.svg %}
-      </a>
-      <a href="https://twitter.com/AlexBouvier86" target="_blank">
-        {% include icons/twitter.svg %}
-      </a>
-      <a href="https://www.malt.fr/profile/alexandrebouvier" target="_blank">
-        {% include icons/malt.svg %}
-      </a>
-    </div>
-  </footer>
-</div>
+<footer class="container inner">
+  <div>
+    <a href="https://www.linkedin.com/in/alexandre-bouvier-4b9a85101/" target="_blank">
+      {% include icons/linkedin.svg %}
+    </a>
+    <a href="https://github.com/alexandrebk/" target="_blank">
+      {% include icons/github.svg %}
+    </a>
+    <a href="https://twitter.com/AlexBouvier86" target="_blank">
+      {% include icons/twitter.svg %}
+    </a>
+    <a href="https://www.malt.fr/profile/alexandrebouvier" target="_blank">
+      {% include icons/malt.svg %}
+    </a>
+  </div>
+  <div>
+    <p>
+      Made with <a href="https://jekyllrb.com" class="underlined" target="_blank">Jekyll</a>,
+      hosted on <a href="https://pages.github.com" class="underlined" target="_blank">Github Pages</a>
+    </p>
+  </div>
+</footer>
