--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,63 +1,60 @@
-<div class="container">
-  <header class="d-flex align-items-center justify-content-center">
-    <nav class="navbar navbar-light light-blue lighten-4 w-100">
-      <div class="d-flex justify-content-between">
-        <a href="/">
-          <div class="d-avatar pull-right">
-            <img class="avatar collapse"
-                 src="/images/alexandrebk.jpeg"
-                 width="84"
-                 height="84"
-                 alt="My profile picture" />
-            <div>
-              <h2>Alexandre <span class="font-weight-bold">Bouvier</span></h2>
-              <h2><span class="text-light-upcase">Fullstack Developer Ruby on Rails</span></h2>
-            </div>
+<header class="container">
+  <nav class="navbar navbar-light light-blue lighten-4 w-100">
+    <div class="d-flex justify-content-between">
+      <a href="/">
+        <div class="d-avatar pull-right">
+          <img class="avatar collapse"
+               src="/images/alexandrebk.jpeg"
+               width="84"
+               height="84"
+               alt="My profile picture" />
+          <div>
+            <h2 class="fullname"><span class="font-weight-bold">Alexandre Bouvier</span></h2>
+            <h2><span class="text-light-upcase">Fullstack Developer Ruby on Rails</span></h2>
           </div>
-        </a>
-        <button class="navbar-toggler toggler-example"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent1"
-                aria-controls="navbarSupportedContent1"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-          <span class="text-white">
-            <i class="fas fa-bars fa-1x"></i>
-          </span>
-        </button>
-      </div>
+        </div>
+      </a>
+      <button class="navbar-toggler toggler-example"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent1"
+              aria-controls="navbarSupportedContent1"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="text-white">
+          {% include icons/bars-solid.svg %}
+        </span>
+      </button>
+    </div>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-        <ul id="list" class="navbar-nav mr-auto p-2">
-          <li class="nav-item">
-            <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">
-              Blog
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page.url == '/resources.html' %} active {% endif %}" href="/resources.html">
-              Ressources Utiles
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page.url contains 'cheat_sheet' %} active {% endif %}" href="/cheat_sheet">
-              Cheat Sheet
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
-              Portfolio
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">
-              CV
-            </a>
-          </li>
-        </ul>
-      </div>
-
-    </nav>
-  </header>
-</div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+      <ul id="list" class="navbar-nav mr-auto p-2">
+        <li class="nav-item">
+          <a class="nav-link {% if page.url == '/' %} active {% endif %}" href="/">
+            Blog
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if page.url == '/resources.html' %} active {% endif %}" href="/resources.html">
+            Ressources Utiles
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if page.url contains 'cheat_sheet' %} active {% endif %}" href="/cheat_sheet">
+            Cheat Sheet
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if page.url == '/portfolio.html' %} active {% endif %}" href="/portfolio.html">
+            Portfolio
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.alexandrebouvier.fr/curriculum-vitae/curriculum-vitae.pdf" target="_blank">
+            CV
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
