--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -23,7 +23,7 @@ h1 {
 }
 
 h2 {
-  font-size:   1.75rem;
+  font-size:   2rem;
   line-height: 125%;
   font-weight: 400;
 }
@@ -75,4 +75,8 @@ p {
 
 .resource {
   padding: 8px 0;
+
+  p {
+    font-size: 1rem;
+  }
 }
