--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,11 +5,18 @@ body {
 }
 
 a {
+  text-decoration: none;
+  background-color: transparent;
   color: $white2;
   &:hover {
     text-decoration: none;
     color: $white2;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
+  margin-top: 0;
 }
 
 h1, h2 {
