change background color

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -3,7 +3,7 @@ $white2: #fdfdfd;
 $black: #212529;
 $grey:  #6A6A6A;
 $light-grey:  rgba(0, 0, 0, .1);
-$light-dark:  #1B2733;
+$light-dark:  #00263A;
 $dark-green:  #436b58;
 $green:       #469E75;
 $light-green: #D5FCE8;
