--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% if page.url contains 'cheat_sheet' %} active {% endif %}" href="/cheat_sheet">
+          <a class="nav-link {% if page.url contains 'cheat_sheets' %} active {% endif %}" href="/cheat_sheets">
             Cheat Sheet
           </a>
         </li>
